@startuml

class Bullet {
    - bulletX: int 
    - bulletY: int
    - speed: double
    - active: bool
    - isPlayerBullet: bool
    - MAX_SPEED: static const double
    + Bullet()
    + Bullet(double, double, bool)
    + Bullet(Bullet&)
    + moveBullet()
}

class Laser {
    + Laser()
    + Laser(double, double, bool)
    + Laser(copyLaser: Laser&)
    + continousDamage(Interceptor&, Enemy&, Collision&)
}
class Missile {
    + Missile()
    + Missile(double, double, bool)
    + Missile(Missile&)
    + explosiveDamage(Interceptor&, Enemy&, Collision&)

}

Bullet <|-- Laser
Laser <|-- Missile